--- a/WebShopLibrary/WebShopLibrary.csproj
+++ b/WebShopLibrary/WebShopLibrary.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
   </ItemGroup>
 
